--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0"
